Fixed layout on mobile and change status of wheater tabs

--- a/src/assets/scss/core/forecast.scss
+++ b/src/assets/scss/core/forecast.scss
@@ -1,7 +1,6 @@
 .forecast {
     display: flex;
     justify-content: space-between;
-    padding-bottom: 50px;
 
     img {
         height: 125px;
